General revisions, fixed test, added check for truncated comment on update

--- a/frontend/src/modules/entitydetails/components/Metadata.css
+++ b/frontend/src/modules/entitydetails/components/Metadata.css
@@ -53,7 +53,7 @@
 .truncate {
     text-overflow: ellipsis;
     overflow: hidden;
-    padding-right: 50px;
+    padding-right: 9%;
     position: relative;
     white-space: nowrap;
 }
@@ -66,6 +66,6 @@
     font-weight: 300;
     padding: 0;
     position: absolute;
-    top: 3px;
+    top: 2px;
     right: 4px;
 }
